--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -21,7 +21,7 @@ body {
 #app {
   width: 100vw;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #fff;
   font-size: 12px;
 }
 
